[package]
name = "bigsi_rs"
version = "0.1.0"
authors = ["Henk C. den Bakker <henkcdenbakker@gmail.com"]
edition = "2018"
license = "MIT"
description = "A in-memory implementation of a BIGSI-like data structure"
repository = "https://github.com/hcdenbakker/bigsi_rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.89"
serde_json = "1.0.9"
bincode = "^1.1.2"
serde_derive = "1.0.89"
bv = "0.11.0"
fasthash = "0.3.2"

[features]
default = ["bv/serde"]
